infrastructure/kyverno/policies/validating_require-requests-limits.yaml
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-requests-limits
  annotations:
    policies.kyverno.io/title: Require Limits and Requests
    policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment
    policies.kyverno.io/description: >-
      Validates that all containers in Deployment templates have CPU and memory
      requests and memory limits specified.
spec:
  validationActions: 
    - Audit
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      resources:   ["deployments"]
      operations:  ["CREATE", "UPDATE"]
    namespaceSelector:
      matchExpressions:
      - key: "toolkit.fluxcd.io/tenant"
        operator: Exists
  validations:
  - expression: >-
      object.spec.template.spec.containers.all(container,
        has(container.resources) &&
        has(container.resources.requests) &&
        has(container.resources.requests.memory) &&
        has(container.resources.requests.cpu) &&
        has(container.resources.limits) &&
        has(container.resources.limits.memory))
    message: "CPU and memory resource requests and limits are required."
